# docs/swagger.json
@@ -610,6 +610,9 @@
                 "upstream"
             ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "cron_expression": {
                     "type": "string"
                 },
@@ -623,6 +626,9 @@
                     "type": "string"
                 },
                 "request_json": {
+                    "type": "string"
+                },
+                "tenant_id": {
                     "type": "string"
                 },
                 "timeout_milliseconds": {
@@ -721,7 +727,14 @@
         },
         "httptransport.ListJobsRequest": {
             "type": "object",
+            "required": [
+                "application_id",
+                "tenant_id"
+            ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "page": {
                     "type": "integer"
                 },
@@ -729,6 +742,9 @@
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "tenant_id": {
                     "type": "string"
                 }
             }
@@ -768,6 +784,9 @@
                 "version"
             ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "cron_expression": {
                     "type": "string"
                 },
@@ -784,6 +803,9 @@
                     "type": "string"
                 },
                 "request_json": {
+                    "type": "string"
+                },
+                "tenant_id": {
                     "type": "string"
                 },
                 "timeout_milliseconds": {
@@ -803,6 +825,9 @@
         "job.Execution": {
             "type": "object",
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -836,6 +861,9 @@
                 "status": {
                     "type": "string"
                 },
+                "tenant_id": {
+                    "type": "string"
+                },
                 "trigger_type": {
                     "type": "string"
                 },
@@ -853,6 +881,9 @@
         "job.Job": {
             "type": "object",
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -875,6 +906,9 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "tenant_id": {
                     "type": "string"
                 },
                 "timeout_milliseconds": {
